--- a/m-step-ahead-predictions.Rmd
+++ b/m-step-ahead-predictions.Rmd
@@ -74,8 +74,6 @@ $$
 
 and then stabilize them using Pareto smoothed importance sampling (PSIS, Vehtari et al, 2017ab). We then gradually decrease $i$ by $1$ and repeat the process. At some observation $i$, the variability in $r_i^{(s)}$ will become too large to that the PSIS approximation will fail (Pareto-k-estimates greater than $0.7$). Then we refit the model using only observations up to the $i$th one and restart the process until we arrived at the $L+1$th observation, where $L$ is the minimum sample size required to make predictions ($L=0$ if predictions of all observations should be computed).
 
-Depending on the particular time-series model and data, the Pareto-k-estimates will exceed $0.7$ rather quickly (i.e. after only few observations) and thus many refits may be required even if applying the above described algorithm. In this case, an option is to exclude only a number of $B$ future values which directly follow the observations to be predicted while keeping all more distant future values $B+1$ to $N$. This will usually result in lower Pareto-k-estimates and thus less refitting. The block-m-SAP resembles the basic m-SAP closely only if values in the distant future (that is farer away than $B$ steps) contain little information about the current observations being predicted. Whether this assumption is justified depends on the data and applied time-series model.
-
 ## Autoregressive models
 
 Autoregressive (AR) models are one of the classic time-series models. An AR-model of order $p$ can be defined as
@@ -358,11 +356,11 @@ ggplot(dat_elpd, aes(x = approx_elpd, y = exact_elpd)) +
 
 ## 1-step-ahead predictions leaving out blocks of future values
 
-Lastly, we are going to illustrate 1-SAP when only leaving out a block of $B$ future observations while keeping more distant future observations (abbreviated as block-1-SAP). This will decrease Pareto-k-estimates on average, but it only a valid approximation of exact 1-SAP if distant futrue values contain little information about the currently left-out observation. 
+Depending on the particular time-series model and data, the Pareto-k-estimates will exceed $0.7$ rather quickly (i.e. after only few observations) and thus many refits may be required even if applying the above described algorithm. In this case, an option is to exclude only a number of $B$ future values which directly follow the observations to be predicted while keeping all more distant future values $B+1$ to $N$. This will usually result in lower Pareto-k-estimates and thus less refitting. The block-m-SAP resembles the basic m-SAP closely only if values in the distant future (that is farer away than $B$ steps) contain little information about the current observations being predicted. Whether this assumption is justified depends on the data and applied time-series model. We are going to illustrate this approach using block-1-SAP.
 
 ### Exact 1-step-ahead predictions
 
-The related code changes little with the exception that we now define a block size of left-out observations, which we set to $B = 10$ for the present case study.
+The related code changes little with the exception that we now define a block size $B$ of left-out observations, which we set to $B = 10$ for the present case study.
 
 ```{r exact_loglik_block, results="hide"}
 B <- 10
