--- a/m-step-ahead-predictions.Rmd
+++ b/m-step-ahead-predictions.Rmd
@@ -374,12 +374,14 @@ for (i in N:(L + 1)) {
 }
 ```
 
-Comparing the exact block-1-SAP to the exact 1-SAP reveals substantial difference demonstrating that the assumption about distant future values containing no additional information is probably not justified in the present case.
+Comparing the exact block-1-SAP to the exact 1-SAP reveals a substantial difference. 
 
 ```{r, cache = FALSE}
 exact_elpds_1sap_block <- apply(loglik, 2, log_mean_exp)
 (exact_elpd_1sap_block <- sum(exact_elpds_1sap_block, na.rm = TRUE))
 ```
+
+This does, however, not necessarily imply that observations depend on distant future values. Rather, the reason could be that the model parameters were estimated more precisely in the block-1-SAP as more data are available in particular for computing 1-SAP of observations early in the time-series. If so, we would expect the differences between pointwise elpds of block-1-SAP and 1-SAP to be larger for earlier observations. And indeed, this is what we see when plotting the differences.
 
 ```{r, cache = FALSE}
 dat_elpd <- data.frame(
